--- a/2config.json
+++ b/2config.json
@@ -4,8 +4,8 @@
 "Username": "imamsahara",
      "Password": "12Syaharani"
      },
- "Target Profit": "200",
- "Target Win": "5000000",
+ "Target Profit": "2000",
+ "Target Win": "5000",
  "Lose Target": "0",
  "Reset If Target Profit": "OFF",
  "Reset If Target Win": "OFF",
@@ -13,11 +13,11 @@
  "Config": [{
 
      "Name Bet Set": "1⃣ Mining Chance 81",
-     "Base Bet": "0.0001",
+     "Base Bet": "0.001",
      "Max Bet": "OFF",
-     "Chance": "7",
+     "Chance": "80",
      "Random Chance": {
-          "Toggle": "OFF",
+          "Toggle": "ON",
           "Min": "80",
           "Max": "81"
         },
@@ -25,23 +25,23 @@
           "Bet": "Low",
           "Hi / Low": {
               "Toggle": "ON",
-              "If Lose": "2.4",
-              "If Win": "2.8"
+              "If Lose": "3",
+              "If Win": "2"
             }
         },
-     "If Win": "1",
-     "If Lose": "1.08",
-     "Reset If Win": "1",
+     "If Win": "1.5",
+     "If Lose": "3",
+     "Reset If Win": "2",
      "Reset If Profit": "0.00000001",
-     "Interval": "1"
+     "Interval": "0"
      },{
 
      "Name Bet Set": "2 - Mining Chance 45 %",
      "Base Bet": "0.000001111111111111",
      "Max Bet": "OFF",
-     "Chance": "9",
+     "Chance": "45",
      "Random Chance": {
-          "Toggle": "OFF",
+          "Toggle": "ON",
           "Min": "5",
           "Max": "50"
         },
@@ -49,21 +49,21 @@
           "Bet": "Low",
           "Hi / Low": {
               "Toggle": "ON",
-              "If Lose": "1",
-              "If Win": "1.1"
+              "If Lose": "3",
+              "If Win": "1"
             }
         },
      "If Win": "1",
-     "If Lose": "1.08",
+     "If Lose": "1.77777777777",
      "Reset If Win": "1",
      "Reset If Profit": "0.00000001",
      "Interval": "212"
      },{
 
      "Name Bet Set": "3 - Mining Chance 40 %",
-     "Base Bet": "0.0001111111111111",
+     "Base Bet": "0.02001111111111111",
      "Max Bet": "OFF",
-     "Chance": "7",
+     "Chance": "40",
      "Random Chance": {
           "Toggle": "OFF",
           "Min": "5",
@@ -73,22 +73,22 @@
           "Bet": "Low",
           "Hi / Low": {
               "Toggle": "ON",
-              "If Lose": "1",
-              "If Win": "1.1"
+              "If Lose": "3",
+              "If Win": "1"
             }
         },
-     "If Win": "1",
-     "If Lose": "1.08",
+     "If Win": "2",
+     "If Lose": "2",
      "Reset If Win": "1",
      "Reset If Profit": "0.00000001",
      "Interval": "212"
      }
   ],
   "Auto Wd": {
-       "Toggle": "ON",
-       "If Balance": "100",
-       "Wallet Address":"D8WxGALtGwLH2GgqNAwZFJ9adpstxWzF4s",
-       "Amount": "50"
+       "Toggle": "OFF",
+       "If Balance": "100000000000",
+       "Wallet Address":"DRmt7VJ9MK85qM6YVTW3yLu9LfdnHaYLee",
+       "Amount": "10"
       },
   "User-Agent": "Android Phone / Chrome 65 [Mobile]:Mozilla/5.0 (Linux; Android 8.0; BLA-L29 Build/HUAWEIBLA-L29) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3236.6 Mobile Safari/537.36"
 
